# langtrace-python-sdk

./: .flake8  .gitignore  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflow/: push-pypi.yml
.github/workflows/: changelog.yml  pre_release.yml  push-pypi.yml  release.yml  run_tests.yml  test.yml
chroma/: chroma.sqlite3
logs/: 2024-06-07T16-58-55-07-00_security-guide_PnT6q6Kqn75k8Wgqw9x8rq.json  2024-06-07T17-00-59-07-00_security-guide_nvPoK8sSq9fwqirnyVXpTT.json  2024-06-07T17-02-09-07-00_security-guide_L9Foe5pZ4kKNchKSjrnmBG.json  2024-06-07T17-05-26-07-00_security-guide_hECF7Z795AWH3W8s7CaJHT.json  2024-06-07T17-05-56-07-00_security-guide_c5gUYigs5mMm4BXwZf3Pv9.json  2024-06-07T17-17-46-07-00_security-guide_8TXTQPM5DzadcwKdZVC4ra.json  2024-06-07T17-20-55-07-00_security-guide_8muqC7EeXUZZR87SPgGhkw.json  2024-06-07T17-35-00-07-00_security-guide_cPwNbU4bKotTZqhPZf5e74.json  2024-06-07T17-35-55-07-00_security-guide_VWvxnwoDsp6HYn6fbt9Tri.json  2024-06-10T17-47-01-07-00_security-guide_fV8bFBJrgZo8hLZ8VMizpn.json  2024-06-10T17-52-51-07-00_security-guide_hhEbZj5tKCbkeZXZThqxDN.json  2024-06-11T17-29-43-07-00_security-guide_hECF7Z795AWH3W8s7CaJHT.json  2024-06-12T10-01-42-07-00_security-guide_JK4cmm7UAxZNPdq3hGrrxo.json  2024-06-12T10-03-15-07-00_security-guide_QCtsMMNEnWS7xbFZwbpFbb.json  2024-06-12T10-03-40-07-00_security-guide_E56YvLVCpqFT6jCNVBWXqh.json  2024-06-12T10-06-37-07-00_security-guide_U5HzKEDA7XefuRsnGcPoEG.json  2024-06-12T18-54-41-07-00_security-guide_SKaR6pSj4DLB88EZgb4XGs.json  2024-06-12T19-03-06-07-00_security-guide_RUaUi4GQaqHfwnsYw5N4b3.json  2024-06-12T19-04-23-07-00_security-guide_gKTYiZEfKpq3CJXiRkboEA.json  2024-06-12T19-06-49-07-00_security-guide_NnYsHcX5QowFsT4q2P7FTq.json  2024-06-12T19-10-00-07-00_security-guide_YTsBzdCuXsQnD8JXmoRr5e.json  2024-06-12T19-10-07-07-00_security-guide_DrGcpD89xQTZPiYN59hzSj.json  2024-06-12T19-20-14-07-00_security-guide_NbMLjeXvkPjWSpZQDQoaRT.json  2024-06-12T19-21-38-07-00_security-guide_7uTjdhszqprw5hGRWF26TN.json  2024-06-12T19-22-28-07-00_security-guide_inCT9mgYbUaFjVdy32qFgi.json
src/: __init__.py  constants.py  entrypoint.py  run_example.py  span_attributes.py
src/constants/instrumentation/: common.py  openai.py  pinecone.py
src/examples/: entrypoint.py
src/examples/anthropic_example/: __init__.py  completion.py
src/examples/autogen_example/: __init__.py  function_calling.py  group_chat.py  main.py  mock_llm.py  openai_example.py
src/examples/awsbedrock_examples/: __init__.py  converse.py  test_runner.py
src/examples/azureopenai_example/: __init__.py  completion.py
src/examples/cerebras_example/: __init__.py  main.py
src/examples/chroma_example/: __init__.py  basic.py
src/examples/cleanlab_example/: simple.py
src/examples/cohere_example/: __init__.py  chat.py  chat_stream.py  chat_streamv2.py  chatv2.py  embed.py  embed_create.py  rerank.py  rerankv2.py  tools.py
src/examples/crewai_example/: basic.py
src/examples/dspy_example/: QA_basic.py  QA_basic_with_chain_of_thought.py  QA_basic_with_signature.py  QA_multi_step_with_chain_of_thought.py  math_problems_cot.py  math_problems_cot_parallel.py  program_of_thought_basic.py  quiz_gen.py  react.py
src/examples/embedchain_example/: simple.py
src/examples/fastapi_example/: __init__.py  basic_route.py
src/examples/gemini_example/: __init__.py  function_tools.py  main.py
src/examples/google_genai_example/: __init__.py  main.py
src/examples/graphlit_example/: __init__.py  (+1 more)
src/extensions/: langtrace_exporter.py
src/init/: __init__.py  init.py
src/instrumentation/: constants.py  setup.py  utils.py
src/langtrace_python_sdk/: __init__.py  langtrace.py  version.py
src/tests/: conftest.py  test_chat.py  test_chat_completion.py  test_image_generation.py  test_pinecone.py  test_session_id.py  utils.py
src/utils/: llm.py  with_root_span.py
(+302 files in other folders)
