# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "langtrace-python-sdk"
dynamic = ["version"]
description = "Python SDK for LangTrace"
readme = "README.md"
authors = [{ name = "Scale3 Labs", email = "engineering@scale3labs.com" }]
license = { text = "AGPL-3.0-or-later" }
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = []

requires-python = ">=3.9"


[project.urls]
Homepage = "https://github.com/Scale3-Labs/langtrace-python-sdk"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "development"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
